--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=mysql://root:@localhost:3306/next_auth
 AUTH_SECRET=rXUiA0LVpWLdFo/UYprWaktm2VGI/ZG4X+w9E2KMEZ4
+RESEND_API_KEY=re_JH5Grw87_GbxEkMYmVjA4WMFxfX9da4b6
+NEXT_APP_URL=http://localhost:3000
